tests/machine/x/cpp/group_by_conditional_sum.error
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp:80:35: error: ‘struct Result’ has no member named ‘cat’
   80 |   decltype(std::declval<Result>().cat) key;
      |                                   ^~~
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp:80:35: error: ‘struct Result’ has no member named ‘cat’
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp: In lambda function:
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp:139:22: error: ‘class std::any’ has no member named ‘cat’
  139 |       auto __key = i.cat;
      |                      ^~~
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp: In lambda function:
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp:162:64: error: ‘struct Result’ has no member named ‘flag’
  162 |                   std::vector<decltype((std::declval<Result>().flag
      |                                                                ^~~~
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp:163:70: error: ‘struct Result’ has no member named ‘val’
  163 |                                             ? std::declval<Result>().val
      |                                                                      ^~~
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp:162:64: error: ‘struct Result’ has no member named ‘flag’
  162 |                   std::vector<decltype((std::declval<Result>().flag
      |                                                                ^~~~
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp:163:70: error: ‘struct Result’ has no member named ‘val’
  163 |                                             ? std::declval<Result>().val
      |                                                                      ^~~
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp:164:50: error: template argument 1 is invalid
  164 |                                             : 0))>
      |                                                  ^
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp:164:50: error: template argument 2 is invalid
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp:167:29: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  167 |                     __items.push_back((x.flag ? x.val : 0));
      |                             ^~~~~~~~~
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp:167:42: error: ‘struct Result’ has no member named ‘flag’
  167 |                     __items.push_back((x.flag ? x.val : 0));
      |                                          ^~~~
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp:167:51: error: ‘struct Result’ has no member named ‘val’
  167 |                     __items.push_back((x.flag ? x.val : 0));
      |                                                   ^~~
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp: In instantiation of ‘main()::<lambda()>::<lambda(auto:1)> [with auto:1 = int]’:
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp:161:19:   required from here
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp:160:44: error: request for member ‘begin’ in ‘v’, which is of non-class type ‘int’
  160 |                   return std::accumulate(v.begin(), v.end(), 0.0);
      |                                          ~~^~~~~
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp:160:55: error: request for member ‘end’ in ‘v’, which is of non-class type ‘int’
  160 |                   return std::accumulate(v.begin(), v.end(), 0.0);
      |                                                     ~~^~~
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp: In lambda function:
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp:174:63: error: ‘struct Result’ has no member named ‘val’
  174 |                   std::vector<decltype(std::declval<Result>().val)> __items;
      |                                                               ^~~
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp:174:63: error: ‘struct Result’ has no member named ‘val’
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp:174:67: error: template argument 1 is invalid
  174 |                   std::vector<decltype(std::declval<Result>().val)> __items;
      |                                                                   ^
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp:174:67: error: template argument 2 is invalid
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp:176:29: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  176 |                     __items.push_back(x.val);
      |                             ^~~~~~~~~
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp:176:41: error: ‘struct Result’ has no member named ‘val’
  176 |                     __items.push_back(x.val);
      |                                         ^~~
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp: In instantiation of ‘main()::<lambda()>::<lambda(auto:2)> [with auto:2 = int]’:
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp:173:19:   required from here
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp:172:44: error: request for member ‘begin’ in ‘v’, which is of non-class type ‘int’
  172 |                   return std::accumulate(v.begin(), v.end(), 0.0);
      |                                          ~~^~~~~
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp:172:55: error: request for member ‘end’ in ‘v’, which is of non-class type ‘int’
  172 |                   return std::accumulate(v.begin(), v.end(), 0.0);
      |                                                     ~~^~~
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp: In lambda function:
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp:155:24: error: no matching function for call to ‘std::vector<std::pair<int, __struct4> >::push_back(<brace-enclosed initializer list>)’
  155 |       __items.push_back(
      |       ~~~~~~~~~~~~~~~~~^
  156 |           {g.key,
      |           ~~~~~~~       
  157 |            __struct4{
      |            ~~~~~~~~~~   
  158 |                g.key,
      |                ~~~~~~   
  159 |                (([&](auto v) {
      |                ~~~~~~~~~~~~~~~
  160 |                   return std::accumulate(v.begin(), v.end(), 0.0);
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  161 |                 })(([&]() {
      |                 ~~~~~~~~~~~
  162 |                   std::vector<decltype((std::declval<Result>().flag
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  163 |                                             ? std::declval<Result>().val
      |                                             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  164 |                                             : 0))>
      |                                             ~~~~~~
  165 |                       __items;
      |                       ~~~~~~~~
  166 |                   for (auto x : g.items) {
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~
  167 |                     __items.push_back((x.flag ? x.val : 0));
      |                     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  168 |                   }
      |                   ~     
  169 |                   return __items;
      |                   ~~~~~~~~~~~~~~~
  170 |                 })()) /
      |                 ~~~~~~~ 
  171 |                 ([&](auto v) {
      |                 ~~~~~~~~~~~~~~
  172 |                   return std::accumulate(v.begin(), v.end(), 0.0);
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  173 |                 })(([&]() {
      |                 ~~~~~~~~~~~
  174 |                   std::vector<decltype(std::declval<Result>().val)> __items;
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  175 |                   for (auto x : g.items) {
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~
  176 |                     __items.push_back(x.val);
      |                     ~~~~~~~~~~~~~~~~~~~~~~~~~
  177 |                   }
      |                   ~     
  178 |                   return __items;
      |                   ~~~~~~~~~~~~~~~
  179 |                 })()))}});
      |                 ~~~~~~~~~
In file included from /usr/include/c++/13/vector:66,
                 from /workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp:10:
/usr/include/c++/13/bits/stl_vector.h:1281:7: note: candidate: ‘void std::vector<_Tp, _Alloc>::push_back(const value_type&) [with _Tp = std::pair<int, __struct4>; _Alloc = std::allocator<std::pair<int, __struct4> >; value_type = std::pair<int, __struct4>]’
 1281 |       push_back(const value_type& __x)
      |       ^~~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:1281:35: note:   no known conversion for argument 1 from ‘<brace-enclosed initializer list>’ to ‘const std::vector<std::pair<int, __struct4> >::value_type&’ {aka ‘const std::pair<int, __struct4>&’}
 1281 |       push_back(const value_type& __x)
      |                 ~~~~~~~~~~~~~~~~~~^~~
/usr/include/c++/13/bits/stl_vector.h:1298:7: note: candidate: ‘void std::vector<_Tp, _Alloc>::push_back(value_type&&) [with _Tp = std::pair<int, __struct4>; _Alloc = std::allocator<std::pair<int, __struct4> >; value_type = std::pair<int, __struct4>]’
 1298 |       push_back(value_type&& __x)
      |       ^~~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:1298:30: note:   no known conversion for argument 1 from ‘<brace-enclosed initializer list>’ to ‘std::vector<std::pair<int, __struct4> >::value_type&&’ {aka ‘std::pair<int, __struct4>&&’}
 1298 |       push_back(value_type&& __x)
      |                 ~~~~~~~~~~~~~^~~
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp: In function ‘int main()’:
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp:187:5: error: conversion from ‘vector<__struct4>’ to non-scalar type ‘vector<Result>’ requested
  136 |   std::vector<Result> result = ([&]() {
      |                                ~~~~~~~~
  137 |     std::vector<__struct3> __groups;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  138 |     for (auto i : items) {
      |     ~~~~~~~~~~~~~~~~~~~~~~
  139 |       auto __key = i.cat;
      |       ~~~~~~~~~~~~~~~~~~~
  140 |       bool __found = false;
      |       ~~~~~~~~~~~~~~~~~~~~~
  141 |       for (auto &__g : __groups) {
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  142 |         if (__g.key == __key) {
      |         ~~~~~~~~~~~~~~~~~~~~~~~
  143 |           __g.items.push_back(Result{i});
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  144 |           __found = true;
      |           ~~~~~~~~~~~~~~~
  145 |           break;
      |           ~~~~~~
  146 |         }
      |         ~
  147 |       }
      |       ~
  148 |       if (!__found) {
      |       ~~~~~~~~~~~~~~~
  149 |         __groups.push_back(__struct3{__key, std::vector<Result>{Result{i}}});
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  150 |       }
      |       ~
  151 |     }
      |     ~
  152 |     std::vector<std::pair<decltype(std::declval<__struct3>().key), __struct4>>
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  153 |         __items;
      |         ~~~~~~~~
  154 |     for (auto &g : __groups) {
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~
  155 |       __items.push_back(
      |       ~~~~~~~~~~~~~~~~~~
  156 |           {g.key,
      |           ~~~~~~~
  157 |            __struct4{
      |            ~~~~~~~~~~
  158 |                g.key,
      |                ~~~~~~
  159 |                (([&](auto v) {
      |                ~~~~~~~~~~~~~~~
  160 |                   return std::accumulate(v.begin(), v.end(), 0.0);
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  161 |                 })(([&]() {
      |                 ~~~~~~~~~~~
  162 |                   std::vector<decltype((std::declval<Result>().flag
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  163 |                                             ? std::declval<Result>().val
      |                                             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  164 |                                             : 0))>
      |                                             ~~~~~~
  165 |                       __items;
      |                       ~~~~~~~~
  166 |                   for (auto x : g.items) {
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~
  167 |                     __items.push_back((x.flag ? x.val : 0));
      |                     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  168 |                   }
      |                   ~
  169 |                   return __items;
      |                   ~~~~~~~~~~~~~~~
  170 |                 })()) /
      |                 ~~~~~~~
  171 |                 ([&](auto v) {
      |                 ~~~~~~~~~~~~~~
  172 |                   return std::accumulate(v.begin(), v.end(), 0.0);
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  173 |                 })(([&]() {
      |                 ~~~~~~~~~~~
  174 |                   std::vector<decltype(std::declval<Result>().val)> __items;
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  175 |                   for (auto x : g.items) {
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~
  176 |                     __items.push_back(x.val);
      |                     ~~~~~~~~~~~~~~~~~~~~~~~~~
  177 |                   }
      |                   ~
  178 |                   return __items;
      |                   ~~~~~~~~~~~~~~~
  179 |                 })()))}});
      |                 ~~~~~~~~~~
  180 |     }
      |     ~
  181 |     std::sort(__items.begin(), __items.end(),
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  182 |               [](auto &a, auto &b) { return a.first < b.first; });
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  183 |     std::vector<__struct4> __res;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  184 |     for (auto &p : __items)
      |     ~~~~~~~~~~~~~~~~~~~~~~~
  185 |       __res.push_back(p.second);
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~
  186 |     return __res;
      |     ~~~~~~~~~~~~~
  187 |   })();
      |   ~~^~
